--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <h2>jai hind jai bharat</h2>
     <!-- first section -->
     <section class="body_bg">
         <div class="container">
